/*
 * Wire
 * Copyright (C) 2019 Wire Swiss GmbH
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see http://www.gnu.org/licenses/.
 *
 */

import React from 'react';
import {matchComponent} from '../test/testUtil';
import {TextArea} from './TextArea';

describe('"TextArea"', () => {
  it('renders', () => matchComponent(<TextArea>TextArea</TextArea>));
  it('renders as invalid', () => matchComponent(<TextArea markInvalid>TextArea</TextArea>));
  it('renders as disabled', () => matchComponent(<TextArea disabled>TextArea</TextArea>));
  it('renders with placeholderTextTransform', () =>
    matchComponent(
      <TextArea placeholderTextTransform="lowercase" placeholder="TextArea">
        TextArea
      </TextArea>,
    ));
});
